fix spacing

--- a/src/css/global/reset.css
+++ b/src/css/global/reset.css
@@ -64,4 +64,5 @@ body {
 main {
   display: flex;
   flex-direction: column;
+  gap: 2rem;
 }
